[package]
name = "scoped-writer"
version = "0.1.3"
edition = "2021"
description = "Scoped writer utility"
license = "MIT"
repository = "https://github.com/Nugine/scoped-writer"
readme = "README.md"
documentation = "https://docs.rs/scoped-writer"
categories = ["rust-patterns"]
keywords = ["scoped", "writer", "utility"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# warn
dbg_macro = "warn"
